change to gnu stow

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,3 +1,11 @@
+set-environment -gF TMUX_PLUGIN_MANAGER_PATH '#{HOME}/.local/share/tmux/plugins/'
+
+if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
+  run 'mkdir -p "${TMUX_PLUGIN_MANAGER_PATH}"'
+  run 'git clone https://github.com/tmux-plugins/tpm "${TMUX_PLUGIN_MANAGER_PATH}/tpm"'
+  run '${TMUX_PLUGIN_MANAGER_PATH}/tpm/bin/install_plugins'
+}
+
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
 
@@ -13,35 +21,40 @@ set -g status-position top       # macOS / darwin style
 set -g default-terminal "${TERM}"
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+set -g allow-rename off
+set -g renumber-window on
 
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_date_time_text "%H:%M:%S"
+set -g @catppuccin_date_time_text "%H:%M"
 # leave this unset to let applications set the window title
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-set -g @catppuccin_window_status "icon"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_status "no"
 set -g @catppuccin_window_current_background "#{@thm_mauve}"
 set -g @catppuccin_status_fill "all"
 set -g @catppuccin_status_connect_separator "yes"
 
-
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# source the plugin here
+run '#{TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
 
 # Make the status line pretty and add some modules
+set -g status-interval 5
+set -g status-left-length 100
+set -g status-right-length 100
 set -g status-left ""
-set -g  status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_user}"
-set -ag status-right "#{E:@catppuccin_status_directory}"
+set -g status-right "#{E:@catppuccin_status_directory}"
 set -ag status-right "#{E:@catppuccin_status_date_time}"
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-#Test home-manager
+# initialize tmux plugin manager and source all plugins
+run '#{TMUX_PLUGIN_MANAGER_PATH}/tpm/tpm'
