--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -6,3 +6,4 @@ window-decoration = false
 macos-option-as-alt = true
 background-opacity = 0.7
 background-blur-radius = 20 
+window-save-state = always
