--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -12,7 +12,7 @@ right_format = """$all"""
 command_timeout = 1000
 
 [git_branch]
-format =  '[$symbol$branch(:$remote_branch)]($style)'
+format = '[$symbol$branch(:$remote_branch)]($style)'
 
 [docker_context]
 disabled = true
@@ -44,3 +44,6 @@ surface0 = "#313244"
 base = "#1e1e2e"
 mantle = "#181825"
 crust = "#11111b"
+
+[aws]
+disabled = true
