make module structure and add configs for hyprland enviroment

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,8 +1,9 @@
-set-environment -gF TMUX_PLUGIN_MANAGER_PATH '#{HOME}/.local/share/tmux/plugins/'
+set-environment -gF TMUX_PLUGIN_MANAGER_PATH '#{HOME}/.tmux/plugins/'
 
 if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
   run 'mkdir -p "${TMUX_PLUGIN_MANAGER_PATH}"'
   run 'git clone https://github.com/tmux-plugins/tpm "${TMUX_PLUGIN_MANAGER_PATH}/tpm"'
+  run 'git clone -b v2.1.3 https://github.com/catppuccin/tmux.git ${TMUX_PLUGIN_MANAGER_PATH}/catppuccin/tmux'
   run '${TMUX_PLUGIN_MANAGER_PATH}/tpm/bin/install_plugins'
 }
 
@@ -24,6 +25,7 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 set -g allow-rename off
 set -g renumber-window on
 
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "wl-copy"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -47,7 +49,7 @@ set -g @catppuccin_status_fill "all"
 set -g @catppuccin_status_connect_separator "yes"
 
 # source the plugin here
-run '#{TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
+run '#{TMUX_PLUGIN_MANAGER_PATH}/catppuccin/tmux/catppuccin.tmux'
 
 # Make the status line pretty and add some modules
 set -g status-interval 5
