--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,5 @@
 theme = "Catppuccin Mocha"
-font-size = 20
+font-size = 12
 background-blur-radius = 20
 mouse-hide-while-typing = true
 window-decoration = false
@@ -7,3 +7,6 @@ macos-option-as-alt = true
 background-opacity = 0.7
 background-blur-radius = 20 
 window-save-state = always
+copy-on-select = clipboard
+# mouse-bind = right_click_unconsumed=paste_from_clipboard
+keybind = ctrl+v=paste_from_clipboard
