add steal the workspace keybinds

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -306,6 +306,18 @@ bind = $mainMod CTRL, left, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Move workspaces to current monitor
+bind = $mainMod ALT, 1, exec, hyprctl dispatch moveworkspacetomonitor 1 current && hyprctl dispatch workspace 1
+bind = $mainMod ALT, 2, exec, hyprctl dispatch moveworkspacetomonitor 2 current && hyprctl dispatch workspace 2
+bind = $mainMod ALT, 3, exec, hyprctl dispatch moveworkspacetomonitor 3 current && hyprctl dispatch workspace 3
+bind = $mainMod ALT, 4, exec, hyprctl dispatch moveworkspacetomonitor 4 current && hyprctl dispatch workspace 4
+bind = $mainMod ALT, 5, exec, hyprctl dispatch moveworkspacetomonitor 5 current && hyprctl dispatch workspace 5
+bind = $mainMod ALT, 6, exec, hyprctl dispatch moveworkspacetomonitor 6 current && hyprctl dispatch workspace 6
+bind = $mainMod ALT, 7, exec, hyprctl dispatch moveworkspacetomonitor 7 current && hyprctl dispatch workspace 7
+bind = $mainMod ALT, 8, exec, hyprctl dispatch moveworkspacetomonitor 8 current && hyprctl dispatch workspace 8
+bind = $mainMod ALT, 9, exec, hyprctl dispatch moveworkspacetomonitor 9 current && hyprctl dispatch workspace 9
+bind = $mainMod ALT, 0, exec, hyprctl dispatch moveworkspacetomonitor 10 current && hyprctl dispatch workspace 10
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
