--- a/hyperland/.config/hypr/hyprlock.conf
+++ b/hyperland/.config/hypr/hyprlock.conf
@@ -6,9 +6,9 @@ general {
 
 background {
     monitor =
-    path = screenshot   # Делает скриншот текущего стола
+    path = screenshot
     color = rgba(25, 20, 20, 1.0)
-    blur_passes = 2 # 0 - выкл размытие
+    blur_passes = 2
     blur_size = 7
     noise = 0.0117
     contrast = 0.8916
@@ -48,7 +48,7 @@ label {
 
 label {
     monitor =
-    text = $LAYOUT   $CAPS_LOCK
+    text = $LAYOUT
     color = rgba(243, 139, 168, 1.0)
     font_size = 12
     font_family = JetBrains Mono Nerd Font Bold
