add xterm256 option to ghostty

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -57,9 +57,11 @@ $menu = wofi --show drun
 
 exec-once = /usr/lib/
 # exec-once = $terminal
+# exec-once = systemctl --user start graphical-session.target
+# exec-once = systemctl --user start waybar.service
+exec-once = waybar & hyprpaper & swaync
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
-exec-once = waybar & hyprpaper & swaync
 exec-once = dropbox
 exec-once = kanshi
 exec-once = sleep 5 && syncthingtray 
@@ -261,6 +263,7 @@ bind = $mainMod, N, exec, swaync-client -t -sw
 bind = $mainMod, Escape, exec, wlogout
 bind = $mainMod, Tab, exec, rofi -show window
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, L, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
