--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -10,3 +10,4 @@ window-save-state = always
 copy-on-select = clipboard
 # mouse-bind = right_click_unconsumed=paste_from_clipboard
 keybind = ctrl+v=paste_from_clipboard
+term = xterm-256color
